# AIChat

./: .gitignore
ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
Test/: CMakeLists.txt  testLLMProvider.cpp
sdk/: CMakeLists.txt
sdk/include/: ChatSdk.h  DataManager.h  DeepSeekProvider.h  GeminiProvider.h  LLMManager.h  LLMProvider.h  OllamaLLMProvider.h  SessionManager.h  commen.h
sdk/include/util/: mylog.h
sdk/src/: ChatSdk.cpp  DataManager.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  LLMManager.cpp  OllamaLLMProvider.cpp  SessionManager.cpp  mylog.cpp
